# git-dump

./: .gitignore  LICENSE  README.md  git-dump  git_dump.py  go.mod  go.sum  pyproject.toml
.github/workflows/: build.yml
cmd/git-dump/: main.go
internal/config/: config.go
internal/gitindex/: gitindex.go
internal/httpclient/: httpclient.go
internal/utils/: utils.go
