[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "git-dump-tool"
authors = [{name = "Sergey M"}]
readme = "README.md"
license = {file = "LICENSE"}

classifiers = [
  "Topic :: Internet"
]

requires-python = ">=3.6.5"

dependencies = [
  "requests",
]

dynamic = ["version"]

# pip install -e '.[dev]'
# pip install -e '.[test]'
[project.optional-dependencies]
test = [
  "pytest",
]

dev = [
  "black",
  "pylint",
]

[project.urls]
Repository = "https://github.com/s3rgeym/git-dump.git"

[tool.setuptools.dynamic]
version = {attr = "git_dump.__version__"}

[project.scripts]
git-dump = 'git_dump:main'
